# ChangeLog for app-text/llpp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/llpp/ChangeLog,v 1.64 2014/12/09 05:48:22 zlogene Exp $

  09 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> llpp-17_p20140112.ebuild:
  x86 stable wrt bug #472532

  27 Aug 2014; Agostino Sarubbo <ago@gentoo.org> llpp-17_p20140112.ebuild:
  Stable for ppc, wrt bug #472532

  27 Aug 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag description from metadata.xml

*llpp-20_p20140818 (25 Aug 2014)

  25 Aug 2014; Michael Weber <xmw@gentoo.org> +files/llpp-20-WM_CLASS.patch,
  +llpp-20_p20140818.ebuild, metadata.xml:
  Version bump, prepare for upcoming USE=egl

*llpp-19 (21 Jul 2014)

  21 Jul 2014; Michael Weber <xmw@gentoo.org> +llpp-19.ebuild:
  Version bump

  17 Apr 2014; Michael Weber <xmw@gentoo.org> llpp-18.ebuild:
  Resign manifest

*llpp-18 (17 Apr 2014)

  17 Apr 2014; Michael Weber <xmw@gentoo.org> +llpp-18.ebuild:
  Version bump

  07 Mar 2014; Pacho Ramos <pacho@gentoo.org> llpp-17_p20140112.ebuild:
  amd64 stable, bug 472532

  23 Jan 2014; Michael Weber <xmw@gentoo.org> -llpp-12.ebuild, -llpp-16.ebuild,
  -llpp-16_p20130828.ebuild:
  Drop old stable and unstable versions for security issues (bug 498876)

*llpp-17_p20140112 (22 Jan 2014)

  22 Jan 2014; Michael Weber <xmw@gentoo.org> +llpp-17_p20140112.ebuild:
  Version bump

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> llpp-15.ebuild:
  amd64 stable, bug #472532

  30 Aug 2013; Michael Weber <xmw@gentoo.org> llpp-16_p20130828.ebuild:
  Put stable tarball on devspace, new checksum.

*llpp-16_p20130828 (29 Aug 2013)

  29 Aug 2013; Michael Weber <xmw@gentoo.org> +llpp-16_p20130828.ebuild:
  Add snapshot versions for llpp and mupdf

*llpp-16 (29 Aug 2013)

  29 Aug 2013; Michael Weber <xmw@gentoo.org> +llpp-16.ebuild, llpp-15.ebuild,
  llpp-9999.ebuild:
  Version bump

  28 Aug 2013; Michael Weber <xmw@gentoo.org> llpp-15.ebuild: